[tool.poetry]
name = "dz-16"
version = "0.1.0"
description = "Home work #16"
authors = ["legend23 <yu@vtechnology.ru>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
selene = "2.0.0rc9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
